--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>All Pages</title>
+    <title>Welcome to 8 Components Parts! | NSN, Aviation, Electronic Parts Hub</title>
 </head>
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh;">
         <h1 style="font-size: 24px;">Welcome to 8 Components Parts!</h1>
